[ANGLE - iOS] fast/canvas/webgl/webgl-depth-texture.html is failing https://bugs.webkit.org/show_bug.cgi?id=212271

Patch by Kenneth Russell <kbr@chromium.org> on 2020-05-22
Reviewed by Dean Jackson.

Source/ThirdParty/ANGLE:

Use ES 3.0 sized internal formats for unsized depth/stencil
textures when the OES_depth_texture extension is unavailable - as
is the case in iOS's ES 3.0 driver.

* src/libANGLE/renderer/gl/formatutilsgl.cpp:
(rx::nativegl::GetNativeInternalFormat):

LayoutTests:

Remove expected failure of webgl-depth-texture on iOS.

* platform/ios/fast/canvas/webgl/webgl-depth-texture-expected.txt: Removed.

Canonical link: https://commits.webkit.org/225141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262074 268f45cc-cd09-0410-ab3c-d52691b4dbfc